Correzione "Orrori" ortografici nella relazione

--- a/Relazione Scritta/RelazioneVer1.html
+++ b/Relazione Scritta/RelazioneVer1.html
@@ -674,9 +674,9 @@
 <p><strong>Link Utili</strong>:</p>
 
 <ul>
-	<li>Tabella colori <em>ANSI</em>: <a href="">https://en.wikipedia.org/wiki/ANSI<em>escape</em>code#Colors&nbsp;</a>(#) e <a href="">https://i.stack.imgur.com/7H7H9.png</a>(https://i.stack.imgur.com/7H7H9.png)</li>
-	<li>Guida VT100 e sequenze di escape: <a href="">https://vt100.net/docs/vt100-ug/chapter3.html</a>(#)</li>
-	<li>Caratteri Speciali Prompt: <a href="">https://ss64.com/osx/syntax-prompt.html</a>(#)</li>
+	<li>Tabella colori <em>ANSI</em>: <a href="">https://en.wikipedia.org/wiki/ANSI<em>escape</em>code#Colors&nbsp;</a> e <a href="">https://i.stack.imgur.com/7H7H9.png</a></li>
+	<li>Guida VT100 e sequenze di escape: <a href="">https://vt100.net/docs/vt100-ug/chapter3.html</a></li>
+	<li>Caratteri Speciali Prompt: <a href="">https://ss64.com/osx/syntax-prompt.html</a></li>
 </ul>
 </blockquote>
 
